selections of datasets. You can pass a list of indices for the points you
want to select. This is useful, for instance, when interfacing with FastBit
to perform queries that select a small subset of non-contiguous particles.

Because views are now supported on write, it is possible to write a dataset
using multiple 'passes' or to leave some values unwritten.

Internal Handling of Dataspaces
-------------------------------

H5PartSetNumParticles and H5PartSetNumParticlesStrided now share the same
HDF5 dataspace state in the H5PartFile struct with the calls that modify
the view (H5PartSetView etc.). Previously, the memory and disk dataspaces
were regenerated from the view on every read access, which was unnecessary.

Autogeneration of API Calls
---------------------------

Python scripts have been added to automatically generate read/write call
variants for different data types.

Renamed Fortran Include
-----------------------

The automake system no longer greps the *F90.inc files to generate an include
called 'H5Part.inc'. Instead, the *F90.inc files have been renamed to *.f90,
and awk is used to generate an 'H5PartF.h' file (the same naming convention
as in MPI's 'mpif.h').

The change to *.f90 was necessary to facilitate integration of the Fortran
API into doxygen. Note that the *.f90 files will not compile, nor can they
be included directly. Simply use

  include 'H5PartF.h'

in your Fortran code to include all the definitions for Fortran H5Part/H5Block
calls.

64 Char Limit on Dataset Names
------------------------------

Previously, a user could overrun internal buffers for dataset names. Now, a
fixed limit of 64 chars is imposed. Dataset names that are longer than this are
truncated and a warning is printed. We expect that most users are using
short canoncical names like x, px, id, etc.


#### H5PART 1.4 ##############################################################

Error Handling
--------------